syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package packet_stream;

message SendPacketRequest {
    google.protobuf.Timestamp ts = 1;
    uint32 caplen = 2;
    uint32 len = 3;
    bytes data = 4;
}

service Packet {
    rpc SendPacket(stream SendPacketRequest) returns (google.protobuf.Empty);
}